// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component render desktop version with items 1`] = `
"<header className=\\"header\\" items={{...}} onLogout={[undefined]}>
  <Symbol(react.fragment)>
    <Button className=\\"headerUser\\" color=\\"clean\\" modifier=\\"inverted\\" size=\\"small\\" disabled={false} type=\\"button\\" active={false}>
      <Select type=\\"menu\\" position=\\"under\\" menuButton={{...}} onSelect={[undefined]} items={{...}} open={{...}} closeOnClickOutside={true} disabled={false} height=\\"auto\\" value={false} sortItems={true} isMobile={false} />
    </Button>
    <Button className=\\"headerLogout\\" color=\\"clean\\" modifier=\\"inverted\\" size=\\"small\\" onClick={[undefined]} disabled={false} type=\\"button\\" active={false}>
      Logout
      <Icon className=\\"iconRight\\" size=\\"18\\" name=\\"exit_to_app\\" align=\\"middle\\" />
    </Button>
  </Symbol(react.fragment)>
</header>"
`;

exports[`Header component render desktop version without items 1`] = `
"<header className=\\"header\\" items={[undefined]} onLogout={[undefined]}>
  <Symbol(react.fragment)>
    <Button className=\\"headerUser\\" color=\\"clean\\" modifier=\\"inverted\\" size=\\"small\\" disabled={false} type=\\"button\\" active={false}>
      <span>
         
        <Icon className=\\"iconLeft\\" name=\\"person\\" size=\\"18\\" align=\\"middle\\" />
         
         
      </span>
    </Button>
    <Button className=\\"headerLogout\\" color=\\"clean\\" modifier=\\"inverted\\" size=\\"small\\" onClick={[undefined]} disabled={false} type=\\"button\\" active={false}>
      Logout
      <Icon className=\\"iconRight\\" size=\\"18\\" name=\\"exit_to_app\\" align=\\"middle\\" />
    </Button>
  </Symbol(react.fragment)>
</header>"
`;

exports[`Header component render mobile version 1`] = `
"<header className=\\"header isMobile\\" items={[undefined]} onLogout={[undefined]}>
  <Symbol(react.fragment)>
    <div className=\\"logo\\" onClick={[undefined]} />
    <Button className=\\"headerLogout isMobile\\" color=\\"clean\\" modifier=\\"inverted\\" size=\\"small\\" onClick={[undefined]} disabled={false} type=\\"button\\" active={false}>
      <Icon className=\\"iconRight\\" size=\\"18\\" name=\\"exit_to_app\\" align=\\"middle\\" />
    </Button>
  </Symbol(react.fragment)>
</header>"
`;

exports[`Header component render with children 1`] = `
"<header className=\\"header\\" items={[undefined]} onLogout={[undefined]}>
  <div>
    teste com filho
  </div>
</header>"
`;
